# minima-fork

./: .env.sample  .gitignore  README.md  docker-compose-mcp.yml  note-to-self.md
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
indexer/: .dockerignore  .minimaignore  Dockerfile  README.md  app.py  app.py.bak  async_loop.py  chunking.py  cleanup.py  entrypoint.sh  ignore_patterns.py  indexer.py  logger_config.py  poller.py  pyproject.toml  requirements.txt  run.py  single_file_loader.py  test_mount.py
indexer/indexer/: __init__.py  cleanup.py  indexer.py
indexer/tests/: test_tags.py
mcp-server/: Dockerfile  README.md  requirements.txt  setup.py
project_docs/: 01_note-to-self.md  advanced_tools.md  clarifying-tools.md  cleanup_implementation_plan.md  deduplication-indexer.md  epub_implementation.md  file_sync_implementation.md  how-reindexing-works.md  indexer_refactoring_plan.md  markdown-header-metadata-splitter.md  mcp-full-text.md  mcp.md  note-to-self.md  obsidian-integration.md  obsidian-loader-langchain.md  pdf_implementation_revised.md  planned-features.md  qdrant-search.md  qdrant_payload_implementation-obsidian_markdown_parser.md  rag_implementation_plan.md  requestor.py  roadmap.md  simplified_rag_implementation.md  sync_implementation_plan.md  tag_cleanup.md
project_docs/archive/: manager.py  qdrant-mcp-server-plan.md  simplification-overview.md  tag_cleanup.md  (+1 more)
sample_vault/: docker-compose-mcp.yml  note1.md  note2.md  note3.md  test files.md  test.md
tests/: check_gpu.py  obsidian-loader-test.py
(+68 files in other folders)
