[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indexer"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A vector database indexer with cleanup functionality"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "qdrant-client",
    "langchain",
    "langchain-qdrant",
    "langchain-huggingface",
    "torch",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/minima-fork"